# sherpa_onnx_dart

./: .gitattributes  .gitignore  .metadata  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: dummy.cpp
android/src/main/jniLibs/: arm64-v8a
android/src/main/kotlin/app/polyvox/flutter_sherpa_onnx/: FlutterSherpaOnnxPlugin.kt
android/src/test/kotlin/app/polyvox/flutter_vosk/: FlutterVoskPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/app/polyvox/flutter_vosk_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/flutter_vosk_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/assets/: test.pcm
example/assets/asr/: decoder-epoch-12-avg-4-chunk-16-left-128.int8.onnx  decoder-epoch-99-avg-1.int8.onnx  decoder-epoch-99-avg-1.int8.ort  decoder-epoch-99-avg-1.int8.required_operators.config  decoder-epoch-99-avg-1.int8.required_operators.with_runtime_opt.config  decoder-epoch-99-avg-1.int8.with_runtime_opt.ort  encoder-epoch-12-avg-4-chunk-16-left-128.int8.onnx  encoder-epoch-99-avg-1.int8.onnx  encoder-epoch-99-avg-1.int8.ort  encoder-epoch-99-avg-1.int8.required_operators.config  encoder-epoch-99-avg-1.int8.required_operators.with_runtime_opt.config  encoder-epoch-99-avg-1.int8.with_runtime_opt.ort  joiner-epoch-12-avg-4-chunk-16-left-128.int8.onnx  joiner-epoch-99-avg-1.int8.onnx  joiner-epoch-99-avg-1.int8.ort  joiner-epoch-99-avg-1.int8.required_operators.config  joiner-epoch-99-avg-1.int8.required_operators.with_runtime_opt.config  joiner-epoch-99-avg-1.int8.with_runtime_opt.ort  tokens.txt
example/integration_test/: integration_test.dart  plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  transcriber.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner/: Info.plist
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
examples/assets/: resampled.pcm  test2.pcm
examples/assets/model/: decoder-epoch-99-avg-1.int8.ort  decoder-epoch-99-avg-1.int8.with_runtime_opt.ort  encoder-epoch-99-avg-1.int8.required_operators.config  joiner-epoch-99-avg-1.int8.required_operators.with_runtime_opt.config
examples/dart/: sherpa_onnx_dart_example.dart
examples/flutter/: .gitattributes  .metadata  README.md  pubspec.yaml
examples/flutter/android/app/: build.gradle
examples/flutter/ios/Runner.xcodeproj/: project.pbxproj
examples/flutter/lib/: main.dart
examples/flutter/linux/: CMakeLists.txt  my_application.cc
examples/flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
examples/flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
examples/flutter/macos/Runner.xcodeproj/: project.pbxproj
examples/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
examples/flutter/macos/Runner/Configs/: AppInfo.xcconfig
examples/flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
hook/: build.dart
ios/: flutter_sherpa_onnx.podspec
ios/Classes/: FlutterSherpaOnnxPlugin.h  FlutterSherpaOnnxPlugin.mm  FlutterSherpaOnnxPluginCApi.c  SwiftFlutterSherpaOnnxPlugin.swift
ios/include/: FlutterSherpaOnnxPluginCApi.h  SwiftFlutterSherpaOnnxPlugin-Bridging-Header.h  c-api.h
lib/: FlutterSherpaOnnxFFIIsolateRunner.dart  audio_buffer.dart  flutter_sherpa_onnx.dart  flutter_sherpa_onnx_ffi.dart  flutter_sherpa_onnx_ffi_isolate.dart  flutter_sherpa_onnx_method_channel.dart  flutter_sherpa_onnx_platform_interface.dart  generated_bindings.dart  ring_buffer.dart  sherpa_onnx_dart.dart  write-file.dart
lib/ios/onnxruntime.framework/: Info.plist
lib/macos/static/onnxruntime.framework/: Info.plist
lib/src/: ring_buffer.dart  sherpa_onnx_dart.g.dart  sherpa_onnx_dart_base.dart  sherpa_onnx_isolate.dart  sherpa_onnx_recognizer.dart  sherpa_onnx_recognizer_impl.dart
linux/: CMakeLists.txt  flutter_vosk_plugin.cc  flutter_vosk_plugin_private.h
linux/include/flutter_vosk/: flutter_vosk_plugin.h
linux/test/: flutter_vosk_plugin_test.cc
macos/: flutter_sherpa_onnx.podspec  flutter_vosk.podspec
macos/Classes/: FlutterVoskPlugin.swift
native/include/: extras.h
native/include/sherpa-onnx/csrc/: resample.h
native/src/: extras.cpp
onnxruntime_prebuilt/: .gitattributes
onnxruntime_prebuilt/lib/macos/dynamic/onnxruntime.framework/Versions/A/Resources/: Info.plist
onnxruntime_prebuilt/lib/macos/dynamic/onnxruntime.framework/Versions/A/_CodeSignature/: CodeResources
test/: flutter_sherpa_onnx_test.dart  flutter_vosk_method_channel_test.dart  flutter_vosk_test.dart  output.pcm  ring_buffer_test.dart  test.pcm
windows/: CMakeLists.txt  flutter_sherpa_onnx_plugin.cpp  flutter_sherpa_onnx_plugin.h  flutter_sherpa_onnx_plugin_c_api.cpp
windows/include/flutter_sherpa_onnx/: flutter_sherpa_onnx_plugin_c_api.h
windows/test/: flutter_sherpa_onnx_plugin_test.cpp
